# PiVOS

./: .gitignore  README.md  aarch64-linux-gnu.txt
.github/ISSUE_TEMPLATE/: backlog-item.md
pivos/: .clang-format  .clang-tidy  meson.build  meson.options
pivos/include/kernel/: assert.h  call.h  dev.h  example.h  int.h  log.h  memory.h  proc.h  test.h  test2.h  test3.h  utils.h
pivos/include/kernel/buffer/: ring.h  stack.h
pivos/include/kernel/call/: dev.h  proc.h
pivos/include/kernel/dev/: generic_timer.h  gicv2.h  uart.h
pivos/include/kernel/dev/generic_timer/: impl.h  reg.h
pivos/include/kernel/dev/gicv2/: impl.h  reg.h
pivos/include/kernel/dev/uart/: impl.h  reg.h
pivos/include/kernel/example/: test.h  test2.h  test3.h
pivos/include/kernel/loader/: elf.h
pivos/include/kernel/memory/: allocator.h  mmu.h
pivos/include/kernel/memory/mmu/: impl.h  reg.h
pivos/scripts/: .env.in  con_dbg.sh.in  dbg.sh.in  fill_script.sh  launch.json.in  link.ld.in  start.sh.in
pivos/src/: assert.c  boot.s  call.c  dev.c  int.c  libc.c  main.c  memory.c  proc.c  utils.c
pivos/src/boot/: boot.S  mmu.S
pivos/src/call/: dev.c  proc.c
pivos/src/dev/: generic_timer.c  gicv2.c  uart.c
pivos/src/int/: int_table.S
pivos/src/loader/: elf.c
pivos/src/memory/: allocator.c  mmu.c
tools/: build.sh  connect_debugger.sh  debugger.sh  default_build.sh  parser.sh  run.sh  setup.sh  setup_project.sh  start.sh  start_debug.sh  utils.sh
